<resources>
    <string name="app_name">Crypto Portfolio</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="portfolio">Portfolio</string>

    <string name="add_asset">Add asset</string>
    <string name="add">Add</string>
    <string name="go_to_history">go to history</string>
    <string name="remove_from_list">remove from list</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="usd">USD</string>
    <string name="night_mode">Night mode</string>
    <string name="main_portfolio">Main Portfolio</string>

    <string name="price_for_coin">price for coin:</string>
    <string name="no_assets">No assets added.</string>
    <string name="no_history">Your transaction history will be here.</string>
    <string name="sell_buy">sell/buy</string>

    <string name="search_hint">Search assets...</string>
    <string name="symbol">symbol</string>
    <string name="empty">0.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>